# kaminari_app

./: CMakeLists.txt  build-android-qt.sh  build.gradle  build_log.txt  crash_log.txt  find-stl.sh  gradle.properties  jni_bridge.cpp  local.properties  main.cpp  rename_libs.sh  settings.gradle
android/: AndroidManifest.xml  build.gradle
android/res/values/: libs.xml
android/src/org/qtproject/qt6/android/bindings/android/src/org/qtproject/qt6/android/bindings/: QtActivity.java
apk_contents/: AndroidManifest.xml  classes2.dex  classes3.dex  resources.arsc
apk_contents/res/color/: abc_hint_foreground_material_dark.xml  abc_hint_foreground_material_light.xml
apk_contents/res/drawable/: abc_btn_check_material_anim.xml  abc_btn_radio_material_anim.xml
apk_contents/res/drawable-anydpi-v24/: ic_launcher_foreground.xml
apk_contents/res/layout/: abc_activity_chooser_view_list_item.xml  abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_material.xml  abc_alert_dialog_title_material.xml  abc_cascading_menu_item_layout.xml  abc_dialog_title_material.xml  abc_list_menu_item_layout.xml  abc_popup_menu_item_layout.xml  abc_search_dropdown_item_icons_2line.xml  abc_search_view.xml  abc_select_dialog_material.xml  abc_tooltip.xml  notification_template_part_time.xml
apk_contents/res/layout-v21/: notification_template_custom_big.xml
apk_contents/res/layout-v22/: abc_alert_dialog_button_bar_material.xml
apk_contents/res/layout-watch-v20/: abc_alert_dialog_title_material.xml
apk_contents/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: app.cpp
app/src/main/headers/: app.h
app/src/main/java/com/AfamObioha/kaminari_app/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/cpp/: app_test.cpp
app/src/test/java/org/example/: AppTest.java
build-android/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  kaminari_app  qrc_myresources.cpp
build-android/.qt/: QtDeploySupport.cmake
build-android/android-build/: build.gradle  settings.gradle
build-android/android-build/src/main/: AndroidManifest.xml
build-android/android-build/src/main/java/org/qtproject/qt6/android/: QtNative.java
build-android/android-build/src/main/java/org/qtproject/qt6/android/bindings/: QtActivity.java  QtApplication.java
build-android/android-build/src/main/res/values/: libs.xml
build-android/kaminari_app_autogen/: deps  moc_predefs.h
build-android/kaminari_app_autogen/EWIEGA46WW/: moc_FolderWidget.cpp  moc_FolderWidget.cpp.d  moc_NewFolderDialog.cpp  moc_NewFolderDialog.cpp.d  moc_NewItemDialog.cpp  moc_NewItemDialog.cpp.d  moc_SketchPage.cpp  moc_SketchPage.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
gradle/wrapper/: gradle-wrapper.properties
